<resources>
    <string name="app_name">LearnPopote</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="access_your_classes_on_phone"> <b><i>Learn, Popote Ulipo!  </i></b></string>
    <string name="skip">Skip</string>
    <string name="title">LEARN</string>
    <string name="tag">…popote ulipo…</string>
    <string name="mobile_learning">Mobile Learning</string>
    <string name="copy">An app by Kenneth Mwenda</string>
    <string name="name">Your Official Names</string>
    <string name="nameHint">Please enter at least two names.</string>
    <string name="email">Email Address</string>
    <string name="emailHint">someone@example.com</string>
    <string name="phone">Phone Number</string>
    <string name="phoneHint">+254 *** *** ****</string>
    <string name="password">Password</string>
    <string name="passHint">Your Password</string>
    <string name="repeatPassword">Confirm Password</string>
    <string name="pass2Hint">Password Again</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPass">Forgot Password</string>
    <string name="slideAlt">Slide main image</string>
    <string name="pagerIndicator">Pager indicator</string>
    <string name="goToLogin">Go to login</string>
    <string name="fbButtonAlt">Login with Facebook</string>
    <string name="googleButtonAlt">Login with Google</string>
    <string name="appLogoAlt">Application logo</string>
    <string name="bgImageAlt">Background image</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="selectCourse">Select from our wide range <br />of courses.</string>
    <string name="accessCourse">Access courses on any device, <br />any time.</string>
    <string name="completeCourse">Completion certificates issued <br />to all successful students!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="apiKey">AIzaSyAz7727GL5v1bLFUR-ZxyelWZ19TVx4SDg</string>
    <string-array name="menuItems">
        <item>My Profile</item>
        <item>My Classes</item>
        <item>My Grades</item>
        <item>Suggested Courses</item>
        <item>Logout</item>
    </string-array>
    <string name="userMap">userMap</string>
    <string name="htmlCourseOutline">
        <b><u>The Fastest, Easiest Way to Learn HTML Fundamentals!</u></b> \n
Professor Teaches courses use real-world settings and accurate simulations to help you apply your new knowledge directly to daily tasks and the knowledge you gain becomes an asset for life.\n
\n
<b>Chapter #1: What is HTML?</b>\n
&#8226; What is a Web Browser?\n
&#8226; What are Versions of HTML?\n
&#8226; What can You Do with HTML?\n
&#8226; HTML Development Environments\n
&#8226; Using a WYSIWYG Editor\n
&#8226; Using an HTML Editor\n
&#8226; Writing Code with a Text Editor\n
&#8226; Publishing Documents\n
\n
        <b>Chapter # 2: Review of HTML Elements</b>\n
&#8226; Rules of Syntax\n
&#8226; Making your Code Readable\n
&#8226; Making your Code XHTML Compliant\n
&#8226; Building a Document\n
&#8226; Using Colors\n
&#8226; Adding Color to your Page\n
&#8226; Using Headings\n
&#8226; Using Paragraphs\n
&#8226; Using Blockquotes\n
&#8226; Using Entities\n
&#8226; Aligning Block-Level Elements\n
\n
        <b>Chapter # 3: Inserting Spaces and Line Breaks</b>\n
&#8226; Displaying Preformatted Text\n
&#8226; Formatting with Inline Elements\n
&#8226; Controlling Fonts\n
&#8226; Introducing List Elements\n
&#8226; Creating Unordered Lists\n
&#8226; Creating Ordered Lists\n
&#8226; Creating Definition Lists\n
&#8226; Nesting Lists\n
&#8226; Indenting Text with the &lt;ul&gt; Tag\n
\n
        <b>Chapter #4: What is an HTML Table?</b>\n
&#8226; Building a Table\n
&#8226; Using the Border Attribute\n
&#8226; Cell Padding and Cell Spacing\n
&#8226; Controlling Table and Cell Width\n
&#8226; Aligning a Table on the Page\n
&#8226; Aligning Tables and Text\n
&#8226; Aligning Table Data\n
&#8226; Spanning Columns and Rows\n
&#8226; Nesting Tables\n
&#8226; Adding Color to Tables\n
&#8226; Using Tables as a Design Tool\n
\n
        <b>Chapter #5: Creating a Hyperlink</b>\n
&#8226; Understanding and Using URLs\n
&#8226; Linking to a Web Document\n
&#8226; Linking to a Local Document\n
&#8226; Linking to Anchors\n
&#8226; Opening a New Browser Window\n
&#8226; Creating a Frameset\n
&#8226; Adding the Frame Elements\n
&#8226; Creating the Frames\n
&#8226; Using the Noframes Element\n
&#8226; Using Inline Frames\n
\n
        <b>Chapter #6: Graphic File Formats</b>\n
&#8226; Optimizing Image and File Size\n
&#8226; Inserting Inline Images\n
&#8226; Aligning and Formatting Images\n
&#8226; Using Images to Anchor Links\n
&#8226; Creating a Look-and-Feel\n
&#8226; Sizing and Scaling Images\n
&#8226; Using Transparent Images\n
&#8226; Making an Image Fade In\n
&#8226; Finding and Creating Graphics\n
&#8226; Using GIF Animation \n\n
    </string>
    <string name="introToHtml">
        HTML stands for HyperText Markup Language. It is used to design web pages using a markup language. HTML is the combination of Hypertext and Markup language. Hypertext defines the link between the web pages. A markup language is used to define the text document within tag which defines the structure of web pages. This language is used to annotate (make notes for the computer) text so that a machine can understand it and manipulate text accordingly. Most markup languages (e.g. HTML) are human-readable. The language uses tags to define what manipulation has to be done on the text.
\n
HTML is a markup language used by the browser to manipulate text, images, and other content, in order to display it in the required format. HTML was created by Tim Berners-Lee in 1991. The first-ever version of HTML was HTML 1.0, but the first standard version was HTML 2.0, published in 1999.
\n
Elements and Tags: HTML uses predefined tags and elements which tell the browser how to properly display the content. Remember to include closing tags. If omitted, the browser applies the effect of the opening tag until the end of the page.
\n
HTML page structure: The basic structure of an HTML page is laid out below. It contains the essential building-block elements (i.e. doctype declaration, HTML, head, title, and body elements) upon which all web pages are created.
\n
&lt;DOCTYPE! html&gt;: This is the document type declaration (not technically a tag). It declares a document as being an HTML document. The doctype declaration is not case-sensitive.\n
&lt;html&gt;: This is called the HTML root element. All other elements are contained within it.\n
&lt;head&gt;: The head tag contains the “behind the scenes” elements for a webpage. Elements within the head aren’t visible on the front-end of a webpage. HTML elements used inside the &lt;head&gt; element include:
\n
    &lt;style&gt;\n
    &lt;title&gt;\n
    &lt;base&gt;\n
    &lt;noscript&gt;\n
    &lt;script&gt;\n
    &lt;meta&gt;\n
    &lt;link&gt;
\n
&lt;body&gt;: the body tag is used to enclose all the visible content of a webpage. In other words, the body content is what the browser will show on the front-end.
\n
An HTML document can be created using any text editor. Save the text file using .html or .htm. Once saved as an HTML document, the file can be opened as a webpage in the browser.
\n
NOTE: Basic/built-in text editors are Notepad (Windows) and TextEdit (Macs). Basic text editors are entirely sufficient for when you’re just getting started. As you progress, there are many feature-rich text editors available which allow for greater function and flexibility.
\n
Features of HTML:
\n
    It is easy to learn and easy to use. \n
    It is platform-independent.\n
    Images, videos, and audio can be added to a web page.\n
    Hypertext can be added to text.\n
    It is a markup language.
\n
Why learn HTML?
\n
    It is a simple markup language. Its implementation is easy.\n
    It is used to create a website.\n
    Helps in developing fundamentals about web programming.\n
    Boost professional career.
\n
Advantages:
\n
    HTML is used to build websites.\n
    It is supported by all browsers.\n
    It can be integrated with other languages like CSS, JavaScript, etc.
\n
Disadvantages:
\n
    HTML can only create static webpages. For dynamic webpages, other languages have to be used.\n
    A large amount of code has to be written to create a simple web page.\n
    The security feature is not good.\n
    </string>
    <string name="htmlElementsText">
        <b><u>Introduction to HTML5 Elements</u></b>
\n\n
We are mostly aware of web sites. A web site is simply a collection of web pages. For creating any web page we require. An HTML is the element that is responsible for making any web page. HTML stands for HyperText Markup Language. It is a basic markup language used to make any web pages that further comprise to form websites. HTML had evolved so much from the initial stage when it was formed\n
\n
W3C and WHATWG initially developed HTML. It was initially developed in 1993. W3C mainly checks for standards of Html and other stuff. HTML has evolved a lot from the initial version of 1.0 to the version of 5 HTML5 has lots of new HTML tags.\n
<b>HTML tags, their Uses and Examples</b>\n
\n
Below are some tags of HTML with their uses, and examples. \n\n
<b>New elements in HTML5</b>\n

1)&lt;datalist&gt; – It is a new form element in HTML5 . It helps to implement a feature of autocomplete where an input box appears where the user can insert text to see elements in the list.\n

&lt;output&gt; – This tag represents the output of any calculation which is computed on an HTML file.\n

2) &lt;input type=” text”&gt; – This element is used to receive input from the user. The text entered by the user is generally text form.\n

3) &lt;input type=” password”&gt; – This element is used to receive a password from the user.\n

4) &lt;input type=” submit”&gt; – This tag renders a submit button. This button is used to submit the form.\n

5) &lt;input type=” radio”&gt; – This element helps to receive one input from the user from the available multiple items. User can select any of the items available in the list.\n

6) &lt;input type=” checkbox”&gt; – This element helps to receive multiple inputs from the user from the available multiple items. User can select any number of the items available in the list.\n

7) HTMLput type=” number”&gt; – This element helps to numeric value from the user. User can insert an only numeric value into the field.\n

8) &lt;input type=” email”&gt; – This element helps to validate whether the value inserted by the user is a valid email. It shows an error on submit if the email is not valid.\n
\n
Apart from this, HTML5 has lots of new elements added to it. Some of them are –\n

&#8226; range\n
&#8226; URL\n
&#8226; tel\n
&#8226; audio\n
&#8226; embed\n
\n
Apart from HTML elements. It has also added new semantic elements. Some of the important semantic elements are-\n

&#8226; &lt;article&gt;\n
&#8226; &lt;figcaption&gt;\n
&#8226; &lt;footer&gt;\n
&#8226; &lt;section&gt;\n
&#8226; &lt;mark&gt;\n
&#8226; &lt;figure&gt;\n
&#8226; &lt;aside&gt;\n
&#8226; &lt;main&gt;\n
&#8226; &lt;nav&gt;\n
&#8226; &lt;details&gt;\n
&#8226; &lt;header&gt;\n
    </string>
</resources>