<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <EditText
        android:id="@+id/et_loginName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/nameHint"
        android:background="@drawable/edittext_design"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/et_signUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/emailHint"
        android:background="@drawable/edittext_design"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_loginName"
        app:layout_constraintVertical_bias="0.058"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/et_signUpPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/phoneHint"
        android:background="@drawable/edittext_design"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpEmail"
        app:layout_constraintVertical_bias="0.079"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/et_signUpPassword1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/passHint"
        android:background="@drawable/edittext_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpPhone"
        app:layout_constraintVertical_bias="0.091"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/et_signUpPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/pass2Hint"
        android:background="@drawable/edittext_design"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpPassword1"
        app:layout_constraintVertical_bias="0.122"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:text="@string/signUp"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpPassword2"
        app:layout_constraintVertical_bias="0.268"
        app:layout_constraintWidth_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>