<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pink">

    <ImageView
        android:id="@+id/img_fr1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/elearn3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        android:contentDescription="@string/slideAlt" />


    <TextView
        android:id="@+id/txt_fr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_your_classes_on_phone"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:fontFamily="@font/panettone_demo"


        app:layout_constraintBottom_toTopOf="@+id/img_fr1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/txt_hdr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/step3"
        android:textColor="@color/white"
        android:textSize="60sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_fr1"
        app:layout_constraintTop_toBottomOf="@+id/img_fr1"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/txt_detail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/completeCourse"
        android:textSize="20sp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_fr1"
        app:layout_constraintTop_toBottomOf="@+id/txt_hdr1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.315" />

    <ImageView
        android:id="@+id/img_tab3"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:src="@drawable/tab3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="@+id/txt_hdr1"
        app:layout_constraintTop_toBottomOf="@+id/txt_hdr1"
        app:layout_constraintVertical_bias="0.828"
        android:contentDescription="@string/pagerIndicator"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/gradcap"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        android:contentDescription="@string/goToLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>