<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_fr1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/elearn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        android:contentDescription="@string/slideAlt" />

    <TextView
        android:id="@+id/txt_fr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_your_classes_on_phone"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:fontFamily="@font/panettone_demo"


        app:layout_constraintBottom_toTopOf="@+id/img_fr1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/txt_skip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_fr1"
        app:layout_constraintVertical_bias="0.901" />

    <TextView
        android:id="@+id/txt_hdr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/step1"
        android:textSize="60sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_fr1"
        app:layout_constraintTop_toBottomOf="@+id/img_fr1"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/txt_detail1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/selectCourse"
        android:textSize="23sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_fr1"
        app:layout_constraintTop_toBottomOf="@+id/txt_hdr1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.315" />

    <ImageView
        android:id="@+id/img_tab1"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:src="@drawable/tab1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="@+id/txt_hdr1"
        app:layout_constraintTop_toBottomOf="@+id/txt_hdr1"
        app:layout_constraintVertical_bias="0.828"
        android:contentDescription="pagerIndicator"/>

</androidx.constraintlayout.widget.ConstraintLayout>